--- a/css/main.css
+++ b/css/main.css
@@ -178,17 +178,34 @@ input.leaflet-control-custom {
     height: 30%;
 }
 
-#code-output-panel {
-    height: 100%;
+.slide-panel {
+    position:fixed;
+    display:none;
+    top: 10px;
+    right: 80px;
+    z-index: 1000;
+    height: 210px;
+    width: 330px;
+    background-color: #121212;
+    border-radius: 3px;
+    max-height: 210px;
+}
+
+#settings-panel {
+    justify-content: center;
+    align-items: center;
+    color:white;
 }
 
 #code-output-pre {
     padding: 10px;
     background-color: #121212;
     border: none;
+    border-radius: 0;
     margin: 0;
     overflow-y:auto;
-    height: 100%;
+    max-height: 210px;
+    color: white;
 }
 
 #map-container {
